iptables.conf
# Generated by iptables-save v1.6.0 on Tue Apr 30 10:05:58 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [212:9839]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p udp -m udp --dport 5060 -j ACCEPT

# vps 预览地址端口
-A INPUT -p tcp -m tcp --dport 8134 -j ACCEPT
-A INPUT -p udp -m udp --dport 8134 -j ACCEPT
# vis 预览地址端口
-A INPUT -p tcp -m tcp --dport 8104 -j ACCEPT
-A INPUT -p udp -m udp --dport 8104 -j ACCEPT
# 监控端口
-A INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p udp -m udp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9256 -j ACCEPT
-A INPUT -p udp -m udp --dport 9256 -j ACCEPT


# 28181收流端口，8个通道，每个通道2个端口，10000定义请查阅gb28181Camera.cpp
-A INPUT -p udp -m udp --dport 10000:10016 -j ACCEPT

# for camera
-A INPUT -p udp -m udp --dport 15947 -j ACCEPT

COMMIT
# Completed on Tue Apr 30 10:05:58 2019
